<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_EventType" Id="{cda407a2-a84e-46d4-8509-42940b0ff8b4}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_EventType :
(
	Alarm := 0,
	Message := 1
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>